2007-05-31  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/proxy.py:
	* kiwi/ui/widgets/checkbutton.py:
	* kiwi/ui/widgets/combo.py:
	* kiwi/ui/widgets/entry.py:
	* kiwi/ui/widgets/radiobutton.py:
	* kiwi/ui/widgets/textview.py:
	* tests/test_proxy.py:

	Make the proxy call widget.update(ValueUnset) for all
	proxy widgets when resetting the model (eg,  proxy.set_model(None)).

2007-05-31  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/entry.py:
	* tests/test_Entry.py:
	Fix for #3408, Entry reads valueunset always, when empty

2007-05-31  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/dateentry.py (DateEntry.get_date): Catch ValidationError
	and ignore it.

2007-05-29  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/db/sqlobj.py: Add support for full text indexes under postgres.

	* kiwi/ui/gaxmlloader.py:
	* kiwi/ui/views.py:
	Add support for loading GAXML files

2007-05-28  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/currency.py:
	* kiwi/ui/proxywidget.py: Allow proxy widgets to pass paramenters to the
	datatype converter.
	* kiwi/ui/widgets/entry.py: Never show the currency symbol on currency
	entries. Fixes #3398

2007-05-25  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* gazpacho-plugin/kiwiwidgets.xml:
	* kiwi/ui/gazpacholoader.py:
	Add gazpacho support for ObjectTree, fixes #3389

=== 1.9.15 ===
2007-05-22  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/environ.py (Library.__init__): Save the
	prefix

2007-05-21  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS:
	* debian/changelog:
	* doc/howto.tex:
	* doc/release-checklist.txt:
	* kiwi/__version__.py:
	Release 1.9.15

2007-05-21  Johan Dahlin  <jdahlin@async.com.br>

	* MANIFEST.in: 
	* doc/Makefile: 
	* tools/epyrun: 
	Use pydoctor instead of epydoc.

	* kiwi/python.py (AttributeForwarder): Add a new class,
	which can be used to forward attributes to another