@@ -1,3 +1,9 @@
+2007-06-06  Ronaldo Maia  <romaia@async.com.br>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/widgets/label.py: Allow string replacements in ProxyLabels
+
 2007-05-31  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/ui/proxy.py:
